[GTK] Layout test media/track/track-in-band-duplicate-tracks-when-source-changes.html crashes and times out https://bugs.webkit.org/show_bug.cgi?id=160131

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-12-05
Reviewed by Eric Carlson.

Source/WebCore:

Null dereference can be happen if VideoTrack and AudioTrack are
disconnected from its media element.

No new tests, no behavior change.

* html/track/AudioTrack.cpp:
(WebCore::AudioTrack::willRemove): Null-check mediaElement.
* html/track/VideoTrack.cpp:
(WebCore::VideoTrack::setLanguage): Ditto.

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/196395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225567 268f45cc-cd09-0410-ab3c-d52691b4dbfc